# primeless-year

./: README.md  factor_13446204mmdd.txt  primeless_year.py  primeless_years.txt
primeless_year/: Cargo.toml
primeless_year/src/: integer.rs  lib.rs  year.rs
primeless_year/tests/: integer.rs  lib.rs  tests.rs  year.rs
